@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.11
 
+  *) mod_mime: Ignore leading dots when looking for mime extensions.
+     PR 50434 [Stefan Fritsch]
+
   *) core: Add support to set variables with the 'Define' directive. The
      variables that can then be used in the config using the ${VAR} syntax
      known from envvar interpolation. [Stefan Fritsch]
